[gd_scene load_steps=14 format=2]

[ext_resource path="res://src/Imports/ui_interface_paused.png" type="Texture" id=1]
[ext_resource path="res://src/Imports/default_font_theme.tres" type="Theme" id=2]
[ext_resource path="res://src/ui/ui_scene/menu_button.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/ui/ui_scene/retry_button.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/ui/ui_script/UserInterface.gd" type="Script" id=5]
[ext_resource path="res://src/ui/ui_scene/resume_button.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/Imports/kunai_counter.png" type="Texture" id=7]
[ext_resource path="res://src/Imports/kunai.png" type="Texture" id=8]
[ext_resource path="res://src/Imports/Heart_full.png" type="Texture" id=9]
[ext_resource path="res://src/Imports/Heart_empty.png" type="Texture" id=10]
[ext_resource path="res://src/Imports/slowmo_overlay.png" type="Texture" id=11]

[sub_resource type="Animation" id=1]
resource_name = "fade_in"
length = 1.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:margin_left")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -115.0, -90.0, -17.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:margin_top")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -68.0, -50.0, -11.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:margin_right")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 115.0, 90.0, 19.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:margin_bottom")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 68.0, 50.0, 10.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "reset"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:margin_left")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ -115.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:margin_top")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ -68.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:margin_right")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 115.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:margin_bottom")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 68.0 ]
}

[node name="UserInterface" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.403922 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -17.0
margin_top = -11.0
margin_right = 19.0
margin_bottom = 10.0
texture = ExtResource( 11 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="TextureRect"]
anims/fade_in = SubResource( 1 )
anims/reset = SubResource( 2 )

[node name="PauseOverlay" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="PauseOverlay"]
modulate = Color( 0, 0, 0, 0.741176 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu " type="VBoxContainer" parent="PauseOverlay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -88.0
margin_top = -103.0
margin_right = 81.0
margin_bottom = 104.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ui_interface_paused" type="Sprite" parent="PauseOverlay/Menu "]
position = Vector2( 87.0551, 83.9468 )
scale = Vector2( 3.81732, 2.99441 )
texture = ExtResource( 1 )

[node name="resume_button" parent="PauseOverlay/Menu " instance=ExtResource( 6 )]
margin_right = 169.0
margin_bottom = 66.0

[node name="Retry_button" parent="PauseOverlay/Menu " instance=ExtResource( 4 )]
margin_top = 70.0
margin_right = 169.0
margin_bottom = 136.0

[node name="Quit_button" parent="PauseOverlay/Menu " instance=ExtResource( 3 )]
margin_top = 140.0
margin_right = 169.0
margin_bottom = 207.0
scene = "res://src/ui/MainScreen.tscn"

[node name="kunai_remaining" type="Label" parent="."]
margin_left = 70.9293
margin_top = 38.3181
margin_right = 108.929
margin_bottom = 71.3181
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "15"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score" type="Label" parent="."]
margin_left = 459.31
margin_right = 565.31
margin_bottom = 33.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "score    "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="kunai_counter" type="TextureRect" parent="."]
margin_left = 48.6838
margin_top = 45.918
margin_right = 64.6838
margin_bottom = 61.918
texture = ExtResource( 7 )
stretch_mode = 1

[node name="kunai" type="TextureRect" parent="."]
margin_top = 29.6129
margin_right = 55.0
margin_bottom = 78.6129
texture = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Heart_empty" type="TextureRect" parent="."]
margin_right = 22.0
margin_bottom = 18.0
rect_scale = Vector2( 2, 2 )
size_flags_stretch_ratio = 20.0
texture = ExtResource( 10 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Heart_full" type="TextureRect" parent="."]
margin_right = 22.0
margin_bottom = 18.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 9 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="animation_finished" from="TextureRect/AnimationPlayer" to="." method="faded_in"]
[connection signal="refresh" from="PauseOverlay/Menu /resume_button" to="." method="_on_resume_button_refresh"]
[connection signal="refresh" from="PauseOverlay/Menu /Retry_button" to="." method="_on_Retry_button"]
[connection signal="refresh" from="PauseOverlay/Menu /Quit_button" to="." method="_on_Quit_button"]

[editable path="PauseOverlay/Menu /Retry_button"]
